--- a/bread.html
+++ b/bread.html
@@ -159,7 +159,9 @@
     <footer>
         <span class="border"></span>
         <div class="footer-logo">
-            <img src="img/logo/logo.png" alt="ロゴです">
+            <a href="index.html">
+                <img src="img/logo/logo.png" alt="ロゴです">
+            </a>
         </div>
         <div class="sns-link">
             <ul>
