--- a/index.html
+++ b/index.html
@@ -294,7 +294,9 @@
     <footer>
         <span class="border"></span>
         <div class="footer-logo">
-            <img src="img/logo/logo.png" alt="ロゴです">
+            <a href="index.html">
+                <img src="img/logo/logo.png" alt="ロゴです">
+            </a>
         </div>
         <div class="sns-link">
             <ul>
@@ -318,7 +320,7 @@
         integrity="sha512-lYAcY5E6LZVeNB3Pky37SxbYKzo8A68MzKFoPg5oTuolhRm36D+YRvkrAQS4JuKsaGYeJ5KA5taMEtpNlPUeOA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.js"></script>
+    <!-- <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.js"></script> -->
     <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/slick.js"></script>
